--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -13,116 +11,28 @@
     <children>
         <AnchorPane layoutY="93.0" prefHeight="388.0" prefWidth="601.0" style="-fx-background-color: #fafafa;">
             <children>
-                <TabPane layoutY="-2.0" prefHeight="388.0" prefWidth="601.0" tabClosingPolicy="UNAVAILABLE">
-                    <tabs>
-                        <Tab fx:id="simpleTab_Button" text="Simple">
-                            <content>
-                                <AnchorPane fx:id="simpleTab" minHeight="0.0" minWidth="0.0" prefHeight="224.0" prefWidth="401.0">
-                                    <children>
-                                        <Button fx:id="sTab_Button_1" layoutX="30.0" layoutY="77.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="1" />
-                                        <Button fx:id="sTab_Button_2" layoutX="81.0" layoutY="77.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="2" />
-                                        <Button fx:id="sTab_Button_Plus" layoutX="188.0" layoutY="77.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="49.0" text="+" />
-                                        <Button fx:id="sTab_Button_Minus" layoutX="188.0" layoutY="128.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="50.0" text="-" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <TextField fx:id="sTabTextField" editable="false" layoutX="30.0" layoutY="25.0" prefHeight="36.0" prefWidth="206.0" />
-                                        <Button fx:id="sTab_Button_3" layoutX="134.0" layoutY="77.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="3" />
-                                        <Button fx:id="sTab_Button_4" layoutX="30.0" layoutY="128.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="4" />
-                                        <Button fx:id="sTab_Button_5" layoutX="81.0" layoutY="128.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="5" />
-                                        <Button fx:id="sTab_Button_6" layoutX="134.0" layoutY="128.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="6" />
-                                        <Button fx:id="sTab_Button_7" layoutX="30.0" layoutY="181.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="7" />
-                                        <Button fx:id="sTab_Button_8" layoutX="81.0" layoutY="181.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="8" />
-                                        <Button fx:id="sTab_Button_9" layoutX="134.0" layoutY="181.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="9" />
-                                        <Button fx:id="sTab_Button_0" layoutX="81.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="0" />
-                                        <Button fx:id="sTab_Button_Multiply" layoutX="188.0" layoutY="181.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="50.0" text="*" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="sTab_Button_Divide" layoutX="188.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="49.0" text="/" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="sTab_Button_Equally" layoutX="131.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="49.0" text="=" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="sTab_Button_Comma" layoutX="30.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="," />
-                                        <Button layoutX="30.0" layoutY="290.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="ะก" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <ListView fx:id="sTab_Button_List" layoutX="273.0" layoutY="25.0" prefHeight="257.0" prefWidth="295.0" />
-                                        <Button fx:id="sTab_Button_Delete" layoutX="81.0" layoutY="290.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="&lt;x" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                    </children>
-                                </AnchorPane>
-                            </content>
-                        </Tab>
-                        <Tab fx:id="expressionTab_Button" text="Expression">
-                            <content>
-                                <AnchorPane fx:id="expressionTab" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                    <children>
-                                        <Button fx:id="eTab_Button_Plus" layoutX="183.0" layoutY="74.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="49.0" text="+" />
-                                        <Button fx:id="eTab_Button_Minus" layoutX="183.0" layoutY="125.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="50.0" text="-" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <TextField fx:id="eTab_Button_Text_Field" editable="false" layoutX="25.0" layoutY="22.0" prefHeight="36.0" prefWidth="206.0" />
-                                        <Button fx:id="eTab_Button_3" layoutX="129.0" layoutY="74.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="3" />
-                                        <Button fx:id="eTab_Button_6" layoutX="129.0" layoutY="125.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="6" />
-                                        <Button fx:id="eTab_Button_9" layoutX="129.0" layoutY="178.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="9" />
-                                        <Button fx:id="eTab_Button_Multiply" layoutX="183.0" layoutY="178.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="50.0" text="*" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="eTab_Button_Divide" layoutX="183.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="49.0" text="/" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="eTab_Button_Equally" layoutX="126.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="49.0" text="=" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="eTab_Button_Open" layoutX="126.0" layoutY="291.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="49.0" text="(" />
-                                        <Button fx:id="eTab_Button_Close" layoutX="183.0" layoutY="291.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="49.0" text=")" />
-                                        <Button fx:id="eTab_Button_1" layoutX="25.0" layoutY="77.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="1" />
-                                        <Button fx:id="eTab_Button_2" layoutX="76.0" layoutY="77.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="2" />
-                                        <Button fx:id="eTab_Button_4" layoutX="25.0" layoutY="128.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="4" />
-                                        <Button fx:id="eTab_Button_5" layoutX="76.0" layoutY="128.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="5" />
-                                        <Button fx:id="eTab_Button_7" layoutX="25.0" layoutY="181.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="7" />
-                                        <Button fx:id="eTab_Button_8" layoutX="76.0" layoutY="181.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="8" />
-                                        <Button fx:id="eTab_Button_0" layoutX="76.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="0" />
-                                        <Button fx:id="eTab_Button_Comma" layoutX="25.0" layoutY="236.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="," />
-                                        <Button fx:id="eTab_Button_Cancel" layoutX="25.0" layoutY="290.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="ะก" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <Button fx:id="eTab_Button_Delete" layoutX="76.0" layoutY="290.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="&lt;x" wrapText="true">
-                                            <font>
-                                                <Font size="13.0" />
-                                            </font>
-                                        </Button>
-                                        <ListView fx:id="eTab_Button_List" layoutX="276.0" layoutY="27.0" prefHeight="257.0" prefWidth="295.0" />
-                                    </children>
-                                </AnchorPane>
-                            </content>
-                        </Tab>
-                    </tabs>
-                </TabPane>
+                <Button fx:id="eButtonPlus" layoutX="199.0" layoutY="89.0" mnemonicParsing="false" onAction="#onActionButtonPlus" prefHeight="46.0" prefWidth="49.0" text="+" />
+                <Button fx:id="eButtonMinus" layoutX="199.0" layoutY="140.0" mnemonicParsing="false" onAction="#onActionButtonMinus" prefHeight="46.0" prefWidth="50.0" text="-" />
+                <TextField fx:id="eTextField" editable="false" layoutX="41.0" layoutY="37.0" prefHeight="36.0" prefWidth="206.0" />
+                <Button fx:id="eButton3" layoutX="145.0" layoutY="89.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="3" />
+                <Button fx:id="eButton6" layoutX="145.0" layoutY="140.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="6" />
+                <Button fx:id="eButton9" layoutX="145.0" layoutY="193.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="9" />
+                <Button fx:id="eButtonMultiply" layoutX="199.0" layoutY="193.0" mnemonicParsing="false" onAction="#onActionButtonMultiply" prefHeight="47.0" prefWidth="50.0" text="*" />
+                <Button fx:id="eButtonDivide" layoutX="199.0" layoutY="251.0" mnemonicParsing="false" onAction="#onActionButtonDivide" prefHeight="47.0" prefWidth="49.0" text="/" />
+                <Button fx:id="eButtonEqually" layoutX="142.0" layoutY="251.0" mnemonicParsing="false" onAction="#onActionButtonExpression" prefHeight="47.0" prefWidth="49.0" text="=" />
+                <Button fx:id="eButtonOpen" layoutX="142.0" layoutY="306.0" mnemonicParsing="false" onAction="#onActionButtonBracketStart" prefHeight="46.0" prefWidth="49.0" text="(" />
+                <Button fx:id="eButtonClose" layoutX="199.0" layoutY="306.0" mnemonicParsing="false" onAction="#onActionButtonBracketFinish" prefHeight="46.0" prefWidth="49.0" text=")" />
+                <Button fx:id="eButton1" layoutX="41.0" layoutY="92.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="1" />
+                <Button fx:id="eButton2" layoutX="92.0" layoutY="92.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="2" />
+                <Button fx:id="eButton4" layoutX="41.0" layoutY="143.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="4" />
+                <Button fx:id="eButton5" layoutX="92.0" layoutY="143.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="5" />
+                <Button fx:id="eButton7" layoutX="41.0" layoutY="196.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="7" />
+                <Button fx:id="eButton8" layoutX="92.0" layoutY="196.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="8" />
+                <Button fx:id="eButton0" layoutX="92.0" layoutY="251.0" mnemonicParsing="false" onAction="#onActionButtonAddNumberToTextField" prefHeight="47.0" prefWidth="43.0" text="0" />
+                <Button fx:id="eButtonComma" layoutX="41.0" layoutY="251.0" mnemonicParsing="false" onAction="#onActionButtonComma" prefHeight="47.0" prefWidth="43.0" text="," />
+                <Button fx:id="eButtonCancel" layoutX="41.0" layoutY="305.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="С" />
+                <Button fx:id="eButtonDelete" layoutX="92.0" layoutY="305.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="43.0" text="&lt;x" />
+                <TextArea fx:id="eTextArea" layoutX="287.0" layoutY="36.0" prefHeight="316.0" prefWidth="272.0" />
             </children>
         </AnchorPane>
         <Label layoutX="205.0" layoutY="14.0" prefHeight="79.0" prefWidth="191.0" text="Calculate it!" textAlignment="CENTER" textFill="WHITE">
@@ -132,3 +42,4 @@
         </Label>
     </children>
 </AnchorPane>
+
